default/objects/Conversation_Subject__c/Conversation_Subject__c.object-meta.xml
<CustomObject>
    <description>Junction object linking a Conversation to its subject record.</description>
    <label>Conversation Subject</label>
    <nameField>
        <displayFormat>Subject-{0000}</displayFormat>
        <label>Subject #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversation Subjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>