default/objects/Conversation_Subject__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The conversation whose subject this links to.</description>
    <label>Conversation</label>
    <referenceTo>Conversation__c</referenceTo>
    <relationshipLabel>Conversation Subjects</relationshipLabel>
    <relationshipName>Conversation_Subjects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>