default/objects/Conversation_Subject__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Objective which is the subject of the linked Conversation.</description>
    <label>Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Conversation Subjects</relationshipLabel>
    <relationshipName>Conversation_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>