default/objects/Conversation_Subject__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subject record for a conversation about a Team Member.</description>
    <label>Team Member</label>
    <referenceTo>fHCM2__Team_Member__c</referenceTo>
    <relationshipLabel>Conversation Subjects</relationshipLabel>
    <relationshipName>Conversation_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>